--- a/PID-simulation/PID-Car/index.html
+++ b/PID-simulation/PID-Car/index.html
@@ -13,7 +13,7 @@
 <div class="main-container">
 
     <div id="simulation-container">
-        <h1><span class="icon">🚗</span> Advanced PID Controller Simulation <br> (Enhanced)</h1>
+        <h1> PID Controller Simulation for a Line Following Car </h1>
         <canvas id="roadCanvas"></canvas>
         <div id="info-plots-container">
             <div class="data-display">
@@ -46,15 +46,15 @@
             <h2>PID Tuning (K<sub>p</sub>, K<sub>i</sub>, K<sub>d</sub>)</h2>
             <div class="slider-group">
                 <label>K<sub>p</sub> (Proportional): <output id="kpVal">0.1</output></label>
-                <input type="range" id="kpSlider" min="0" max="1" step="0.01" value="0.1" class="range-slider"/>
+                <input type="range" id="kpSlider" min="0" max="10" step="0.01" value="0.4" class="range-slider"/>
             </div>
             <div class="slider-group">
                 <label>K<sub>i</sub> (Integral): <output id="kiVal">0.008</output></label>
-                <input type="range" id="kiSlider" min="0" max="0.1" step="0.001" value="0.008" class="range-slider"/>
+                <input type="range" id="kiSlider" min="0" max="0.5" step="0.001" value="0.001" class="range-slider"/>
             </div>
             <div class="slider-group">
                 <label>K<sub>d</sub> (Derivative): <output id="kdVal">0.8</output></label>
-                <input type="range" id="kdSlider" min="0" max="2" step="0.05" value="0.8" class="range-slider"/>
+                <input type="range" id="kdSlider" min="0" max="5" step="0.05" value="0.5" class="range-slider"/>
             </div>
         </div>
 
@@ -67,8 +67,6 @@
                     <option value="straight">Straight Line</option>
                     <option value="circle">Circular Track</option>
                     <option value="rectangle">Rectangular Track</option>
-                    <option value="figure8">Figure-8</option>
-                    <option value="spiral">Spiral</option>
                 </select>
             </div>
             <div class="slider-group">
@@ -83,13 +81,13 @@
                 <div class="presets-group">
                     <button id="presetP">P-Only</button>
                     <button id="presetPI">PI</button>
-                    <button id="presetGood">Good</button>
-                    <button id="presetOver">Overdamped</button>
-                    <button id="presetUnder">Underdamped</button>
+<!--                     <button id="presetGood">Good</button>
+                    <button id="presetOver">Overdamped</button> -->
+                    <button id="presetUnder">PID</button>
                 </div>
             </div>
             
-            <div class="control-card help-card">
+<!--             <div class="control-card help-card">
                 <h2>Mathematically Tuned Presets</h2>
                 <p><strong>Preset Descriptions:</strong></p>
                 <ul>
@@ -100,7 +98,7 @@
                     <li><strong>Underdamped</strong>: Fast response, significant overshoot (~50%), oscillatory (ζ<0.7)</li>
                 </ul>
                 <p>Click the road to create wind disturbances and test robustness!</p>
-            </div>
+            </div> -->
         </div>
         </div>
 
