--- a/PID-simulation/PID-Car/index.html
+++ b/PID-simulation/PID-Car/index.html
@@ -81,11 +81,11 @@
                 <div class="presets-group">
                     <button id="presetP">P-Only</button>
                     <button id="presetPI">PI</button>
-                    <button id="presetUnder">PID</button>
+                    <button id="presetPID">PID</button>
                 </div>
             </div>
         </div>
-        </div>
+    </div>
 
 </div>
 
