--- a/PID-simulation/PID-Car/index.html
+++ b/PID-simulation/PID-Car/index.html
@@ -80,9 +80,9 @@
             <div class="presets-group">
                 <button id="presetP">P-Only</button>
                 <button id="presetPI">PI</button>
-                <button id="presetGood">Underdamped</button>
-                <button id="presetOver">Overdamped</button>
-                <button id="presetUnder">Good</button>
+<!--                 <button id="presetGood">Underdamped</button>
+                <button id="presetOver">Overdamped</button> -->
+                <button id="presetUnder">PID</button>
             </div>
         </div>
         
